# hello_ocam

./: dune-project  hello_ocam.opam
_build/: .db  .digest-db  log
_build/default/: hello_ocam.dune-package  hello_ocam.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: hello_ocam.cma  hello_ocam.cmxa  hello_ocam.cmxs
_build/default/lib/.hello_ocam.objs/byte/: hello_ocam.cmi  hello_ocam.cmo  hello_ocam.cmt
_build/default/lib/.hello_ocam.objs/native/: hello_ocam.cmx
_build/default/lib/.merlin-conf/: lib-hello_ocam
_build/default/test/.merlin-conf/: exe-test_hello_ocam
_build/default/test/.test_hello_ocam.eobjs/byte/: dune__exe__Test_hello_ocam.cmi  dune__exe__Test_hello_ocam.cmti
_build/default/test/.test_hello_ocam.eobjs/native/: dune__exe__Test_hello_ocam.cmx
_build/install/default/lib/hello_ocam/: META  dune-package  opam
lib/: dune
test/: dune
